tests/snapshots/snapshot_golden_master__gm_ir_message_with_metadata.snap
---
source: tests/snapshot_golden_master.rs
expression: msg
---
{
  "role": "assistant",
  "content": [
    {
      "type": "text",
      "text": "response with metadata"
    }
  ],
  "metadata": {
    "model": "claude-4-opus",
    "vendor_id": "msg_xyz789"
  }
}
