tests/snapshots/snapshot_golden_master__gm_ir_tool_definition_empty_params.snap
---
source: tests/snapshot_golden_master.rs
expression: td
---
{
  "name": "list_files",
  "description": "List all workspace files",
  "parameters": {
    "properties": {},
    "type": "object"
  }
}
