tests/snapshots/snapshot_golden_master__gm_ir_usage_default.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrUsage::default()"
---
{
  "input_tokens": 0,
  "output_tokens": 0,
  "total_tokens": 0,
  "cache_read_tokens": 0,
  "cache_write_tokens": 0
}
