tests/snapshots/snapshot_golden_master__gm_ir_usage_from_io.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrUsage::from_io(500, 250)"
---
{
  "input_tokens": 500,
  "output_tokens": 250,
  "total_tokens": 750,
  "cache_read_tokens": 0,
  "cache_write_tokens": 0
}
