tests/snapshots/snapshot_golden_master__gm_ir_usage_with_cache.snap
---
source: tests/snapshot_golden_master.rs
expression: "IrUsage::with_cache(1000, 500, 200, 50)"
---
{
  "input_tokens": 1000,
  "output_tokens": 500,
  "total_tokens": 1500,
  "cache_read_tokens": 200,
  "cache_write_tokens": 50
}
