tests/snapshots/snapshot_golden_master__gm_policy_profile_deny_all_network.snap
---
source: tests/snapshot_golden_master.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [
    "*"
  ],
  "require_approval_for": []
}
