tests/snapshots/snapshot_golden_master__gm_policy_profile_tools_only.snap
---
source: tests/snapshot_golden_master.rs
expression: p
---
{
  "allowed_tools": [
    "read",
    "grep"
  ],
  "disallowed_tools": [
    "bash",
    "write"
  ],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
